--- a/master/WebApplicationUI/course/components-forms.html
+++ b/master/WebApplicationUI/course/components-forms.html
@@ -225,7 +225,7 @@
                             
                     <!--/.row-->
                     <div class="row">
-                        <div class="col-md-6 col-sm-offset-3">
+                        <div class="col-md-6-offset-3">
                             <div class="card">
                                 <div class="card-header">
                                     <strong>Add</strong> Course
@@ -309,7 +309,7 @@
                                 </div>
                                 <div class="card-footer">
                                     <button type="submit" class="btn btn-sm btn-primary" ng-disabled="form.$invalid || cs.dataLoading" class="btn btn-primary" ng-click="addcourse()"><i class="fa fa-dot-circle-o"></i> Add</button>
-                                    <a href="#/dashboard"><button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button></a>
+                                    <a href="../Dashboard/index.html"><button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button></a>
                                 </div>
                             </div>
                         </form>
